--- a/bsin/blog/templates/post_detail.html
+++ b/bsin/blog/templates/post_detail.html
@@ -9,7 +9,7 @@
         <p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
         
         {% if user.is_authenticated %}
-          <a class="btn btn-warning" href=" " >Editar</a>
+          <a class="btn btn-warning" href="{% url 'post_update' post.id %} " >Editar</a>
           <a class="btn btn-danger" href=" " >Deletar</a>
         {% endif %}
         <p></p>
