--- a/bsin/blog/templates/post_detail.html
+++ b/bsin/blog/templates/post_detail.html
@@ -10,7 +10,7 @@
         
         {% if user.is_authenticated %}
           <a class="btn btn-warning" href="{% url 'post_update' post.id %} " >Editar</a>
-          <a class="btn btn-danger" href=" " >Deletar</a>
+          <a class="btn btn-danger" href=" {% url 'post_delete' post.id %} " >Deletar</a>
         {% endif %}
         <p></p>
         
