--- a/bsin/blog/templates/base.html
+++ b/bsin/blog/templates/base.html
@@ -59,7 +59,7 @@
                         {% else %}  
                                              
                             <li class="nav-item">
-                                <a class="nav-link" href=" ">Entrar</a>
+                                <a class="nav-link" href=" {% url 'login_user' %}">Entrar</a>
                             </li>                            
                         {% endif %}
                         
