--- a/bsin/blog/templates/cadastro/cadastro.html
+++ b/bsin/blog/templates/cadastro/cadastro.html
@@ -1,31 +1,29 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <title>Cadastro</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</head>
-<body>
-    <div class = "container mt-4">
-        <form method = "POST">
-            <div class = "form-group">
-                {% csrf_token %}
-                {{ form_usuario.as_p }}
-            </div>
-            <div>
-                {% for message in messages %}
-                <div class= "alert alert-danger">
-                    <strong>Error!</strong>
+{% extends 'base.html' %}
+{% load crispy_forms_tags %}
+
+{% block title %}Cadstro{% endblock %}
+
+{% block content %}
+
+   <br>
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <div class="card auth-card">
+                <div class="card-body">
+                    <h2>Novo Usuário</h2>
+                    <form method = "POST" enctype="multipart/form-data">
+                        <div class = "form-group">
+                            {% csrf_token %}
+                            {{  form_usuario | crispy }}
+                        </div>
+                        <button type="submit" class="btn btn-primary">Salvar</button>
+                            
+                    </form>
                 </div>
-                {% endfor %}
-                <div class = "container align-self-center d-flex justify-content-center">
-                    <button type="submit" class="btn btn-dark">Salvar</button>
-                </div>
-            </div>
-        </form>
+            </div>         
+
+        </div>
+        
     </div>
-</body>
+
+{% endblock %}
